One more commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 jwt_secret=secret
 
 #Media
-upload.path=E:\Education\5semester\Spring\MyLabs\Demo\demo\src\main\resources\static\Media
+upload.path=E:\Education\5semester\Spring\MyLabs\Demo\demo\src\main\resources\static\react-js-example\Media
 
