--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,13 @@ spring.datasource.password=root
 #Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 #JWT secret
+
 jwt_secret=secret
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.maxFileSize = 50MB
+spring.servlet.multipart.maxRequestSize = 50MB
+
 #Media
-upload.path=E:\Education\5semester\Spring\MyLabs\Demo\demo\src\main\resources\static\react-js-example\Media
+upload.path=E:\Education\5semester\Spring\MyLabs\Demo\demo\src\main\resources\static\react-js-example\public\Audio
 
