--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.servlet.multipart.maxRequestSize = 50MB
 #Media
 upload.path=E:\Education\5semester\Spring\MyLabs\Demo\demo\src\main\resources\static\react-js-example\public\Audio
 
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
