--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,14 @@ upload.path=E:\Education\5semester\Spring\MyLabs\Demo\demo\src\main\resources\st
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
+#Mail
+spring.mail.properties.mail.smtp,starttls.enable=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.mail.properties.mail.smtp.auth=true
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=alrikmo@yandex.by
+spring.mail.password=alrikmo6969
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
